[package]
name = "findora-platform-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
attohttpc = { version = "0.25", default-features = false, features = ["compress", "json", "tls-rustls"] }
finutils = { git = "https://github.com/FindoraNetwork/platform.git", branch = "main"}
ledger = { git = "https://github.com/FindoraNetwork/platform.git", branch = "main"}
zei = { git = "https://github.com/FindoraNetwork/zei.git", branch = "stable-main" }
anyhow = "1.0.79"
globutils = { git = "https://github.com/FindoraNetwork/platform-lib-utils", tag = "v1.0.0" }